crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__unclosed_command.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"$echo(test)\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo(test)",
        ),
        1..11,
    ),
]
