crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__unclosed_string.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(r#\"\"unclosed\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "unclosed",
        ),
        1..9,
    ),
]
