crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_all_primitives.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 593
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..55,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            13..13,
                        ),
                        (
                            "x",
                            13..14,
                        ),
                        (
                            Int | Num | Text | Bool | Null,
                            16..46,
                        ),
                    ),
                    13..46,
                ),
            ],
            None,
            [],
        ),
        5..55,
    ),
]
