crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_empty_array_in_union.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 611
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..34,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            13..13,
                        ),
                        (
                            "x",
                            13..14,
                        ),
                        (
                            [Any] | Text,
                            16..25,
                        ),
                    ),
                    13..25,
                ),
            ],
            None,
            [],
        ),
        5..34,
    ),
]
