crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_failable_at_end.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 504
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..36,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            13..13,
                        ),
                        (
                            "x",
                            13..14,
                        ),
                        (
                            Int | Text?,
                            16..27,
                        ),
                    ),
                    13..27,
                ),
            ],
            None,
            [],
        ),
        5..36,
    ),
]
