crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_is_check.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 575
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        5..8,
                    ),
                    (
                        "x",
                        9..10,
                    ),
                    (
                        Expression(
                            (
                                Int(
                                    (
                                        42,
                                        13..15,
                                    ),
                                ),
                                13..15,
                            ),
                        ),
                        13..15,
                    ),
                ),
                5..15,
            ),
        ),
        5..15,
    ),
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        20..23,
                    ),
                    (
                        "y",
                        24..25,
                    ),
                    (
                        Expression(
                            (
                                Is(
                                    (
                                        Var(
                                            (
                                                "x",
                                                28..29,
                                            ),
                                        ),
                                        28..29,
                                    ),
                                    (
                                        "is",
                                        30..32,
                                    ),
                                    (
                                        Int | Text,
                                        33..43,
                                    ),
                                ),
                                28..43,
                            ),
                        ),
                        28..43,
                    ),
                ),
                20..43,
            ),
        ),
        20..43,
    ),
]
